# TODO-APP

./: README.md  createDB.sh  todo_app.sql
backend/: DbConnection.py  main.py  pyproject.toml  routes.py  services.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: DeleteTasks.tsx  TasksTable.tsx  newTasks.tsx
