[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["emerson <jackrojo21jk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
mysql-connector-python = "^9.3.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
